Service dependency added

--- a/exampleSpringBootApp/src/main/resources/static/upload.html
+++ b/exampleSpringBootApp/src/main/resources/static/upload.html
@@ -8,19 +8,20 @@
     <h2>Photo upload</h2>
 
 
-    <input type="text" id="fileupload" name="fileupload"/>
-    <button id="upload-button" onclick="uploadFile()">Upload</button>
+    <input type="file" id="fileupload" name="fileupload"/>
+    <button id="upload-button" onclick="uploadPhoto()">Upload</button>
 
     <script>
-        async function uploadPhoto(){
-            let formData = new FormData();
-            formData.append("image", fileupload.files[0]);
-            await fetch('http://localhost:8080/photoupload', {
-                method: "POST",
-                body: formData
-                }).then(result => result.text())
-                    .then(text => alert(text));
-        }
+
+       async function uploadPhoto(){
+           let formData = new FormData();
+           formData.append("image", fileupload.files[0]);
+           await fetch('http://localhost:8080/photoupload', {
+               method: "POST",
+               body: formData
+               }).then(result => result.text())
+                   .then(text => alert(text));
+       }
     </script>
 
 
